# terrain-gen-api

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: benches.rs
configuration/: base.yaml
examples/heightmap/: main.rs
scripts/: image.sh
src/: domain.rs  heightmap.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: domain.rs  mod.rs  new_heightmap.rs
src/javascript/: index.js
src/routes/: ec.rs  height_map.rs  mod.rs  wave_fn.rs
src/routes/home/: home.html
src/templates/: main.html
src/views/app/: content_loader.rs  heightmap_items.rs  mod.rs
static/: index.html  main.js  package-lock.json  package.json
static/www/: index.html
static/www/js/: index.js  main.js  package-lock.json
terrain-gen-api/: package-lock.json
terrain-gen-api/terrain-gen-api/: Cargo.toml  LICENSE_MIT
terrain-gen-api/terrain-gen-api/src/: configuration.rs  lib.rs  startup.rs
terrain-gen-api/terrain-gen-api/src/javascript/: index.js
terrain-gen-api/terrain-gen-api/src/routes/: ec.rs  mod.rs
terrain-gen-api/terrain-gen-api/src/templates/: index.html
terrain-gen-api/terrain-gen-api/src/views/app/: content_loader.rs  heightmap_items.rs
tests/: test.rs
