[package]
name = "terrain-gen-api"
version = "0.1.0"
edition = "2021"
description = "zero to production and midpnt displacement for terrain gen"
repository = "https://github.com/nuts-rice/terrain-gen-api"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
anyhow = "1.0.69"
async-trait = "0.1.67"
base16ct = "0.2.0"
chrono = "0.4.24"
env_logger = "0.10.0"
fmt = "0.1.0"
log = { version = "0.4.17", features = ["std"] }
num = { version = "0.4.0", features = ["num-bigint"] }
num-bigint = "0.4.3"
once_cell = "1.17.1"
rapier3d = "0.17.1"
secrecy = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
test-log = { version = "0.2.11", features = ["trace"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
uuid = "1.3.0"
wasm-bindgen = "0.2.84"
yew = "0.20.0"

[dev-dependencies]
actix-rt = "2.8.0"
criterion = "0.4.0"
once_cell = "1.17.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = "0.11.14"
rstest = "0.16.0"
tokio = "1.25.0"

[[test]]
name = "integration"
path = "tests/test.rs"
