[package]
name = "terrain-gen-api"
version = "0.1.0"
edition = "2021"
description = "zero to production and midpnt displacement for terrain gen"
repository = "https://github.com/nuts-rice/terrain-gen-api"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.69"
async-trait = "0.1.67"
base16ct = "0.2.0"
cgmath = "0.18.0"
chrono = "0.4.24"
config = "0.13.3"
env_logger = "0.10.0"
fmt = "0.1.0"
image = "0.24.6"
log = { version = "0.4.17", features = ["std"] }
ndarray = "0.15.6"
num = { version = "0.4.0", features = ["num-bigint"] }
num-bigint = "0.4.3"
once_cell = "1.17.1"
rand = "0.8.5"
rapier3d = "0.17.1"
rapier_testbed3d = "0.17.0"
secrecy = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
serde-aux = "4"
simple_logger = "4.1.0"
test-log = { version = "0.2.11", features = ["trace"] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.10.1"
url = "2.3.1"
uuid = "1.3.0"
validator = { version = "0.16.0", features = ["derive"] }
yew = "0.20.0"

[dev-dependencies]
claims = "0.7.0"
once_cell = "1.7.2"
reqwest = {version = "0.11", features = ["json"]}

[[test]]
name = "integration"
path = "tests/test.rs"

[lib]
crate-type = ["cdylib", "rlib"]
