[package]
name = "terrain-gen-api"
version = "0.1.0"
edition = "2021"
description = "zero to production and midpnt displacement for terrain gen"
repository = "https://github.com/nuts-rice/terrain-gen-api"
license = "MIT OR Apache-2.0"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
anyhow = "1.0.69"
async-trait = "0.1.67"
base16ct = "0.2.0"
bevy = "0.10.1"
bevy_rapier3d = { version = "0.21.0", features = ["simd-stable"] }
cgmath = "0.18.0"
chrono = "0.4.24"
clap = { version = "4.3.10", features = ["derive"] }
config = "0.13.3"
coord_2d = "0.3.6"
criterion = { version = "0.5.1", features = ["async", "async-std", "async_tokio", "async_futures", "async_std"] }
env_logger = "0.10.0"
fmt = "0.1.0"
futures = "0.3.28"
image = "0.24.6"
log = { version = "0.4.17", features = ["std"] }
ndarray = "0.15.6"
num = { version = "0.4.0", features = ["num-bigint"] }
num-bigint = "0.4.3"
once_cell = "1.17.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"
rand_xorshift = "0.3.0"
rapier3d = "0.17.1"
rayon = "1.7.0"
secrecy = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
serde-aux = "4"
simple_logger = "4.1.0"
test-log = { version = "0.2.11", features = ["trace"] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.10.1"
url = "2.3.1"
uuid = "1.3.0"
validator = { version = "0.16.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
wasm-pack = "0.11.1"
wfc = "0.10.7"
wfc_image = "0.12.1"

[[bench]]
name = "benches"
harness = false

[dev-dependencies]
claims = "0.7.0"
once_cell = "1.7.2"
reqwest = {version = "0.11", features = ["json"]}

[[test]]
name = "integration"
path = "tests/test.rs"

[lib]
crate-type = ["cdylib", "rlib"]
